// Copyright 2021 Linka Cloud  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package linka.cloud.protodb.internal.replication.raft;

option go_package = "go.linka.cloud/protodb/internal/replication/raft/pb;pb";

import "patch/go.proto";
option (go.lint).all = true;

message Op {
  uint64 id = 1;
  oneof action {
    New new = 2;
    Set set = 3;
    Delete delete = 4;
    Commit commit = 5;
  }
}

message New {
  uint64 at = 1;
}

message Set {
  bytes key = 1;
  bytes value = 2;
  uint64 expires_at = 3;
}

message Delete {
  bytes key = 1;
}

message Commit {
  uint64 at = 1;
}

message Entry {
  oneof cmd {
    Chunk chunk = 1;
  }
}

message Tx {
  uint64 readAt = 1;
  uint64 commitAt = 2;
  repeated Set sets = 3;
  repeated Delete deletes = 4;
}

message Chunk {
  string tx_id = 1;
  uint64 offset = 2;
  uint64 total = 3;
  bytes data = 4;
  bool discard = 5;
}
